# test-packing

./: pyproject.toml
src/test_packaging/: example.py
