[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test_packaging"
version = "0.0.1"
authors = [
    { name="Example Author", email="wayne.xu@funpodium.net" }
]
description = "Test package the module"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"